Fixed missing asterisk for required inputs, added overflow control for labels (#1554)

--- a/src/main/resources/assets/admin/common/styles/api/form/set/form-set-view.less
+++ b/src/main/resources/assets/admin/common/styles/api/form/set/form-set-view.less
@@ -27,7 +27,7 @@
         font-size: 16px;
         color: @admin-font-gray3;
         padding-right: 20px;
-        width: calc(100% - 20px);
+        width: calc(100% - 30px);
         .ellipsis();
       }
     }
@@ -51,9 +51,8 @@
           .icon-close();
           .focusable();
 
-          margin-right: -4px;
           border: 1px solid transparent;
-          line-height: 20px;
+          line-height: 15px;
           float: right;
           text-decoration: none;
           cursor: pointer;
